<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dialogue">

    <LinearLayout
        android:layout_width="306dp"
        android:layout_height="166dp"
        android:background="@color/azul"
        android:orientation="vertical"
        android:padding="12dip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingBottom="12dip"
            android:text="@string/editarItem"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/txtDesc"
            android:layout_width="282dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/descripcion"
            android:inputType="textPersonName"
            android:textColorHint="@color/white"
            android:textSize="12dp"
            android:textColor="@color/white"
            app:backgroundTint="@color/white" />

        <EditText
            android:id="@+id/txtNum"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:ems="10"
            android:hint="@string/valor"
            android:inputType="numberDecimal"
            android:textColorHint="@color/white"
            android:textSize="12dp"
            android:textColor="@color/white"
            app:backgroundTint="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCancelar"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/cancelar"
                app:backgroundTint="@color/red" />

            <Button
                android:id="@+id/btnGuardar"
                android:layout_width="134dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/guardar"
                app:backgroundTint="@color/oscuro" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>