<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/btnSalud"
        android:layout_width="46dp"
        android:layout_height="41dp"
        android:background="@drawable/btn_redondo"
        android:onClick="startSalud"
        android:text="Button"
        app:backgroundTint="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.135"
        app:layout_constraintStart_toEndOf="@+id/bntEducation"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.085"
        app:srcCompat="@drawable/ic_hospital" />

    <TextView
        android:id="@+id/txtEd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/educacion"
        app:layout_constraintEnd_toEndOf="@+id/bntEducation"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="@+id/bntEducation"
        app:layout_constraintTop_toBottomOf="@+id/bntEducation" />

    <TextView
        android:id="@+id/txtSalud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/salud"
        app:layout_constraintEnd_toEndOf="@+id/btnSalud"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="@+id/btnSalud"
        app:layout_constraintTop_toBottomOf="@+id/btnSalud" />

    <TextView
        android:id="@+id/txtComida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/comida"
        app:layout_constraintEnd_toEndOf="@+id/btnComida"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="@+id/btnComida"
        app:layout_constraintTop_toBottomOf="@+id/btnComida" />

    <ImageButton
        android:id="@+id/bntEducation"
        android:layout_width="46dp"
        android:layout_height="41dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/btn_redondo"
        android:forceDarkAllowed="false"
        android:onClick="startEducacion"
        app:backgroundTint="@color/verde"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txtInicio"
        app:layout_constraintHorizontal_bias="0.552"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.085"
        app:srcCompat="@drawable/ic_school" />

    <ImageButton
        android:id="@+id/btnTotal"
        android:layout_width="46dp"
        android:layout_height="41dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/btn_redondo"
        android:onClick="startTotal"
        android:text="Button"
        app:backgroundTint="@color/oscuro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.275"
        app:layout_constraintStart_toEndOf="@+id/btnComida"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.085"
        app:srcCompat="@drawable/ic_total" />

    <TextView
        android:id="@+id/txtTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/total"
        app:layout_constraintEnd_toEndOf="@+id/btnTotal"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="@+id/btnTotal"
        app:layout_constraintTop_toBottomOf="@+id/btnTotal" />

    <ImageButton
        android:id="@+id/btnComida"
        android:layout_width="46dp"
        android:layout_height="41dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/btn_redondo"
        android:onClick="startComida"
        android:text="Button"
        app:backgroundTint="@color/amarillo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.141"
        app:layout_constraintStart_toEndOf="@+id/btnSalud"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.085"
        app:srcCompat="@drawable/ic_food" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/azul"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtInicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Inicio"
        android:textSize="24dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="@+id/toolbar" />

</androidx.constraintlayout.widget.ConstraintLayout>